# statement-aggregator

./: pyproject.toml  statement_aggregator.py
